ajuste dos elementos para referência de ebooks

--- a/views/pages/ebook.ejs
+++ b/views/pages/ebook.ejs
@@ -19,31 +19,42 @@
 
                 <section class="informacoes">  
                     <h3 class="subtitle_section">EBOOK</h3>
+                    <!-- ABNT – NBR 6023/2018 -->
                          
                     <form action="" class="fomulario">
-                        <label class="das_informacoes" for="autor">AUTOR</label>
-                        <input type="text" name="lautor" id="autor" placeholder="Autor">
+                        <label class="das_informacoes" for="author">AUTOR</label>
+                        <input type="text" name="lauthor" id="author" placeholder="Autor">
                     </form>
 
                     <form action="" class="fomulario">
-                        <label class="das_informacoes" for="titulo">TÍTULO</label>
-                        <input type="text" name="ltitulo" id="titulo" placeholder="Título">
+                        <label class="das_informacoes" for="title">TÍTULO</label>
+                        <input type="text" name="ltitle" id="title" placeholder="Título">
                     </form> 
 
                     <form action="" class="fomulario">
-                        <label class="das_informacoes" for="titulo">SUBTÍTULO</label>
-                        <input type="text" name="lsubtitulo" id="subtitulo" placeholder="Subtítulo">
+                        <label class="das_informacoes" for="subtitle">SUBTÍTULO</label>
+                        <input type="text" name="lsubtitle" id="subtitle" placeholder="Subtítulo">
                     </form> 
-
-                    <form action="" class="fomulario">
-                        <label class="das_informacoes" for="disponivel">DISPONÍVEL EM:</label>
-                        <input type="text" name="ldisponivel" id="disponivel" placeholder="Disponível">
-                    </form>
 
                     <form action="" class="formulario">
-                        <label class="das_informacoes" for="acesso">ACESSO EM: </label>
-                        <input type="date" name="lacesso" id="acesso" placeholder="Data de acesso">
+                        <label class="das_informacoes" for="edition">EDIÇÃO</label>
+                        <input type="number" name="ledition" id="edition" placeholder="Edição">
                     </form>
+
+                    <form action="" class="fomulario">
+                        <label class="das_informacoes" for="place">LOCAL DA PUBLICAÇÃO</label>
+                        <input type="text" name="lplace" id="place" placeholder="Local da publicação">
+                    </form> 
+
+                    <form action="" class="fomulario">
+                        <label class="das_informacoes" for="editor">EDITORA</label>
+                        <input type="text" name="leditor" id="editor" placeholder="Editora">
+                    </form> 
+
+                    <form action="" class="fomulario">
+                        <label class="das_informacoes" for="year">ANO DE PUBLICAÇÃO</label>
+                        <input type="number" name="lyear" id="year" placehoyearlder="Ano de publicação">
+                    </form> 
 
                     <button type="submit" class="send_book">ENVIAR</button>
                 </section>        
@@ -53,6 +64,6 @@
         </main>
         <footer>CRIADO POR PATRÍCIA SANTANA</footer> 
     </article>
-    <script src="books.js"></script>
+    <script src="/scripts/ebook.js"></script>
 </body>
 </html>
