versão final ebook

--- a/views/pages/ebook.ejs
+++ b/views/pages/ebook.ejs
@@ -56,7 +56,7 @@
                         <input type="number" name="lyear" id="year" placehoyearlder="Ano de publicação">
                     </form> 
 
-                    <button type="submit" class="send_book">ENVIAR</button>
+                    <button type="submit" class="send_ebook">ENVIAR</button>
                 </section>        
                 
                 <%- include('../partials/done'); %>
