--- a/views/pages/article.ejs
+++ b/views/pages/article.ejs
@@ -19,37 +19,67 @@
                     <h3 class="subtitle_section">ARTIGOS</h3>
 
                     <form action="" class="fomulario">
-                        <label class="das_informacoes" for="autor">AUTOR</label>
-                        <input type="text" name="lautor" id="autor" placeholder="Autor">
+                        <label class="das_informacoes" for="author">AUTOR</label>
+                        <input type="text" name="lauthor" id="author" placeholder="Hermione Granger">
                     </form>
 
                     <form action="" class="fomulario">
-                        <label class="das_informacoes" for="titulo">TÍTULO</label>
-                        <input type="text" name="ltitulo" id="titulo" placeholder="Título">
+                        <label class="das_informacoes" for="title">TÍTULO</label>
+                        <input type="text" name="ltitle" id="title" placeholder="Ex.: Um artigo">
                     </form>    
 
                     <form action="" class="fomulario">
-                        <label class="das_informacoes" for="titulo">SUBTÍTULO</label>
-                        <input type="text" name="lsubtitulo" id="subtitulo" placeholder="Subtítulo">
+                        <label class="das_informacoes" for="subtitle">SUBTÍTULO</label>
+                        <input type="text" name="lsubtitle" id="subtitle" placeholder="Ex.: sobre algo">
                     </form>   
 
+                    <form action="" class="formulario">
+                        <label for="" class="das_informacoes">TÍTULO DO PERIÓDICO</label>
+                        <input type="text" name="lperiodic_title" id="journal_title" placeholder="Ex.: Vários Artigos">
+                    </form>
+
                     <form action="" class="fomulario">
-                        <label class="das_informacoes" for="disponivel">DISPONÍVEL EM:</label>
-                        <input type="text" name="ldisponivel" id="disponivel" placeholder="Disponível">
+                        <label class="das_informacoes" for="place">LOCAL DA PUBLICAÇÃO</label>
+                        <input type="text" name="lplace" id="place" placeholder="Ex.: Salvador">
+                    </form>
+
+                    <form action="" class="fomulario">
+                        <label class="das_informacoes" for="volume">VOLUME</label>
+                        <input type="text" name="lvolume" id="volume" placeholder="Ex.: 5">
+                    </form>
+
+                    <form action="" class="fomulario">
+                        <label class="das_informacoes" for="issue">FASCÍCULO</label>
+                        <input type="text" name="lissue" id="issue" placeholder="Ex.: 3">
+                    </form> 
+
+                    <form action="" class="fomulario">
+                        <label class="das_informacoes" for="pages">PÁGINA INICIAL-FINAL</label>
+                        <input type="text" name="lpages" id="pages" placeholder="Ex.: 13-20">
+                    </form>                    
+
+                    <form action="" class="fomulario">
+                        <label class="das_informacoes" for="publication_date">MÊS. ANO DE PUBLICAÇÃO</label>
+                        <input type="text" name="lpublication_date" id="publication_date" placeholder="Ex.: maio/jun. 2018">
+                    </form>
+
+                    <form action="" class="fomulario">
+                        <label class="das_informacoes" for="available">DISPONÍVEL EM:</label>
+                        <input type="text" name="lavailable" id="available" placeholder="Ex.: http://www.variosartigos.com.br/umartigo">
                     </form>
 
                     <form action="" class="formulario">
-                        <label class="das_informacoes" for="acesso">ACESSO EM: </label>
-                        <input type="date" name="lacesso" id="acesso" placeholder="Data de acesso">
+                        <label class="das_informacoes" for="access">ACESSO EM</label>
+                        <input type="text" name="laccess" id="access" placeholder="Ex.: 14 abr. 2021">
                     </form>
 
-                    <button type="submit" class="enviar_informacoes">ENVIAR</button>
+                    <button type="submit" class="send_article">ENVIAR</button>
                 </section>        
-                <!-- acrescentar done.ejs -->
                 <%- include('../partials/done'); %>
             </section>
         </main>
         <footer>CRIADO POR PATRÍCIA SANTANA</footer> 
     </article>
+    <script src="/scripts/article.js"></script>
 </body>
 </html>
