--- a/views/pages/academics.ejs
+++ b/views/pages/academics.ejs
@@ -34,6 +34,36 @@
                         <label class="das_informacoes" for="titulo">SUBTÍTULO</label>
                         <input type="text" name="lsubtitulo" id="subtitulo" placeholder="Subtítulo">
                     </form>  
+                    
+                    <form action="" class="formulario">
+                        <label class="das_informacoes" for="publication_date">ANO DE PUBLICAÇÃO</label>
+                        <input type="year" name="lpublication_date" id="publication_date" placeholder="Ex.: 2016">
+                    </form>
+
+                    <form action="" class="fomulario">
+                        <label class="das_informacoes" for="pages">TOTAL DE PÁGINAS</label>
+                        <input type="number" name="lpages" id="pages" placeholder="Ex.: 150">
+                    </form>
+                    
+                    <form action="" class="fomulario">
+                        <label class="das_informacoes" for="degree">GRAU E ÁREA DE CONCENTRAÇÃO</label>
+                        <input type="text" name="ldegree" id="degree" placeholder="Ex.: Tese (Doutorado em Estudos Literários)">
+                    </form>
+                    
+                    <form action="" class="fomulario">
+                        <label class="das_informacoes" for="university">UNIVERSIDADE/FACULDADE</label>
+                        <input type="text" name="luniversity" id="university" placeholder="Ex.: Universidade Estadual de Feira de Santana">
+                    </form>
+
+                    <form action="" class="fomulario">
+                        <label class="das_informacoes" for="place">LOCAL</label>
+                        <input type="text" name="lplace" id="place" placeholder="Ex.: Feira de Santana">
+                    </form>
+                    
+                    <form action="" class="formulario">
+                        <label class="das_informacoes" for="year">ANO DE DEFESA </label>
+                        <input type="date" name="lyear" id="year" placeholder="Ex.: 2018">
+                    </form>
 
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="disponivel">DISPONÍVEL EM:</label>
@@ -44,6 +74,7 @@
                         <label class="das_informacoes" for="acesso">ACESSO EM: </label>
                         <input type="date" name="lacesso" id="acesso" placeholder="Acesso">
                     </form>
+                    
 
                     <button type="submit" class="enviar_informacoes">ENVIAR</button>
                 </section>        
