--- a/views/partials/aside.ejs
+++ b/views/partials/aside.ejs
@@ -1,7 +1,7 @@
 <aside class="materiais">
-    <button class="site"><a href="site" class="site">SITE</a></button>
-    <button class="video"><a href="video" class="video">VÍDEO</a></button>
-    <button class="ebook"><a href="ebook" class="ebook">EBOOK</a></button>
-    <button class="article"><a href="article" class="article">ARTIGO EM PDF/ONLINE</a></button>
-    <button class="academics"><a href="academics" class="academics">TRABALHOS ACADÊMICOS</a></button>
+    <a href="site" class="site">SITE</a>
+    <a href="video" class="video">VÍDEO</a>
+    <a href="ebook" class="ebook">EBOOK</a>
+    <a href="article" class="article">ARTIGO EM PDF/ONLINE</a>
+    <a href="academics" class="academics">TRABALHOS ACADÊMICOS</a>
 </aside>
