links sem buttons

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -64,25 +64,29 @@ aside.materiais {
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* justify-items: center; */
     gap: 25px;
 }
 /* estilo dos botões dos sites */
-button.site, button.video, button.ebook, button.article, button.academics {
-    background-color: var(--cinco);
+a.site, a.video, a.ebook, a.article, a.academics {
+    font-size: 10px;
+    color: var(--letras);
     width: 113px;
-    height: 5vh;
+    height: 30px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    background-color: var(--cinco);
+    padding-top: 15px;
     margin-left: 10px;
     border: none;
     border-radius: 15px;
+    align-self: center;
 }
 /* estilo dos links nos botões */
-button > a {
-    font-size: 10px;
-    text-decoration: none;
-    color: var(--letras);
-    cursor: pointer;
-}
-.site {
+/*button > a {
+}*/
+a.site {
     margin-top: 24px;
 }
 div.legenda_section {
@@ -159,7 +163,7 @@ footer {
     justify-content: center;
     align-items: center;    
 }
-
+/* procurar outra solução */
 @media only screen and (max-width: 550px) {
     h1 {
         font: normal normal 1.7em serif;
