--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,7 +3,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de referências - ABNT</title>
-    <link rel="stylesheet" href="/style/style.css" type="text/css">
+
+    <!-- estilo geral: celular: 600px -->
+    <link rel="stylesheet" href="/style/style.css" type="text/css" media="all">
+    <!-- tela pequena de celular - paisagem : considerar exclusão-->
+    <link rel="stylesheet" href="/style/style-landscape.css" type="text/css" media="scren and (orientation: landscape)">
+    <!-- tela pequena de tablet -->
+    <link rel="stylesheet" href="/style/style-tablet.css" type="text/css" media="scren and (min-width: 768px) and (max-width: 992px)">
+    <!-- tela comum -->
+    <link rel="stylesheet" href="/style/style-desktop.css" type="text/css" media="scren and (min-width: 992px) and (max-width: 1300px)">
+    <!-- tela grande -->
+    <link rel="stylesheet" href="/style/style-tv.css" type="text/css" media="scren and (min-width: 1300px)">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&display=swap" rel="stylesheet">
