correção das classes

--- a/views/pages/academics.ejs
+++ b/views/pages/academics.ejs
@@ -20,42 +20,42 @@
                 <section class="informacoes">  
                     <h3 class="subtitle_section">TRABALHOS ACADÊMICOS</h3> 
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="author">AUTOR</label>
                         <input type="text" name="lauthor" id="author" placeholder="Ex.: Hermione Granger">
                     </form>
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="title">TÍTULO</label>
                         <input type="text" name="ltitle" id="title" placeholder="Ex.: Uma tese">
                     </form>    
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="subtitle">SUBTÍTULO</label>
                         <input type="text" name="lsubtitle" id="subtitle" placeholder="Ex.: sobre algo">
                     </form>  
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="pages">TOTAL DE PÁGINAS</label>
                         <input type="number" name="lpages" id="pages" placeholder="Ex.: 150">
                     </form>
                     
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="degree">GRAU E ÁREA DE CONCENTRAÇÃO</label>
                         <input type="text" name="ldegree" id="degree" placeholder="Ex.: Tese (Doutorado em Estudos Literários)">
                     </form>
                     
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="program">PROGRAMA</label>
                         <input type="text" name="lprogram" id="program" placeholder="Ex.: Programa de Pós-Graduação em Estudos Literários">
                     </form>
                     
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="university">UNIVERSIDADE/FACULDADE</label>
                         <input type="text" name="luniversity" id="university" placeholder="Ex.: Universidade Estadual de Feira de Santana">
                     </form>
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="place">LOCAL</label>
                         <input type="text" name="lplace" id="place" placeholder="Ex.: Feira de Santana">
                     </form>
@@ -65,7 +65,7 @@
                         <input type="year" name="lyear" id="year" placeholder="Ex.: 2018">
                     </form>
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="available">DISPONÍVEL EM:</label>
                         <input type="text" name="lavailable" id="available" placeholder="Ex.: http://www.algumartigo/um">
                     </form>
