--- a/views/pages/ebook.ejs
+++ b/views/pages/ebook.ejs
@@ -21,17 +21,17 @@
                     <h3 class="subtitle_section">EBOOK</h3>
                     <!-- ABNT – NBR 6023/2018 -->
                          
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="author">AUTOR</label>
                         <input type="text" name="lauthor" id="author" placeholder="Autor">
                     </form>
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="title">TÍTULO</label>
                         <input type="text" name="ltitle" id="title" placeholder="Título">
                     </form> 
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="subtitle">SUBTÍTULO</label>
                         <input type="text" name="lsubtitle" id="subtitle" placeholder="Subtítulo">
                     </form> 
@@ -41,17 +41,17 @@
                         <input type="number" name="ledition" id="edition" placeholder="Edição">
                     </form>
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="place">LOCAL DA PUBLICAÇÃO</label>
                         <input type="text" name="lplace" id="place" placeholder="Local da publicação">
                     </form> 
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="editor">EDITORA</label>
                         <input type="text" name="leditor" id="editor" placeholder="Editora">
                     </form> 
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="year">ANO DE PUBLICAÇÃO</label>
                         <input type="number" name="lyear" id="year" placehoyearlder="Ano de publicação">
                     </form> 
