--- a/views/pages/site.ejs
+++ b/views/pages/site.ejs
@@ -19,22 +19,22 @@
                 <section class="informacoes"> 
                     <h3 class="subtitle_section">SITE</h3>
                     
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="author">AUTOR</label>
                         <input type="text" name="lauthor" id="author" placeholder="Autor">
                     </form>
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="title">TÍTULO</label>
                         <input type="text" name="ltitle" id="title" placeholder="Título">
                     </form> 
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="subtitle">SUBTÍTULO</label>
                         <input type="text" name="lsubtitle" id="subtitle" placeholder="Subtítulo">
                     </form> 
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="available">DISPONÍVEL EM:</label>
                         <input type="text" name="lavailable" id="available" placeholder="Disponível">
                     </form>
