--- a/views/pages/video.ejs
+++ b/views/pages/video.ejs
@@ -17,22 +17,22 @@
                 <section class="informacoes">
                     <h3 class="subtitle_section">VÍDEO</h3>
         
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="channel">CANAL (se não houver autor)</label>
                         <input type="text" name="lchannel" id="channel" placeholder="Canal (se não houver autor)">
                     </form>
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="author">AUTOR (se houver)</label>
                         <input type="text" name="lauthor" id="author" placeholder="Autor (se houver)">
                     </form>
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="titulo">TÍTULO</label>
                         <input type="text" name="ltitle" id="title" placeholder="Título">
                     </form>     
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="subtitle">SUBTÍTULO</label>
                         <input type="text" name="lsubtitle" id="subtitle" placeholder="Subtítulo">
                     </form>  
@@ -42,7 +42,7 @@
                         <input type="date" name="lpublication" id="publication" placeholder="Publicação">
                     </form>
 
-                    <form action="" class="fomulario">
+                    <form action="" class="formulario">
                         <label class="das_informacoes" for="available">DISPONÍVEL EM:</label>
                         <input type="text" name="lavailable" id="available" placeholder="Disponível em">
                     </form>
