--- a/public/style/style-desktop.css
+++ b/public/style/style-desktop.css
@@ -16,7 +16,6 @@ article {
 
 h1 {
     font: normal normal 2.4em serif;
-    color: var(--letras);
     text-align: center;
 }
 h2.titulo_section {
@@ -69,6 +68,9 @@ a.site, a.video, a.ebook, a.article, a.academics {
 a.site {
     margin-top: 24px;
 }
+a:hover {
+    background-color: var(--cinco); 
+}
 div.legenda_section {
     width: 64vw;
     border-bottom: solid 1px var(--tres);
@@ -99,7 +101,7 @@ section.informacoes, section.resultado {
     border-radius: 17px;
     box-shadow: 3px 6px 17px -12px var(--dois);
 }
-form {
+form.formulario {
     margin: 21px 0px 16px 35px;
     display: flex;
     flex-direction: column;
@@ -115,31 +117,10 @@ input {
     border: none;
     border-radius: 7px;
 }
-button[type=submit] {
-    background-color: var(--cinco);
-    color: var(--dois);
-    margin: 5px 35px;
-    border: none;
-    border-radius: 7px;
-    width: 70px;
-    height: 30px;
-    cursor: pointer;
-}
 section.resultado {
-    background-color: var(--um);
     width: 45vw;
     height: 128px;
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 17px;
-    box-shadow: 3px 6px 17px -12px var(--dois);
-} 
-footer {
-    grid-area: footer;
-    color: var(--dois);
-    background-color: var(--quatro);
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;    
 }
