--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-/* definir tudo para celular - principal*/
+/* definir tudo para celular - principal - max-width 600px */
 :root {
     --um: #F2BDBD;
     --dois: #262624;
@@ -14,14 +14,15 @@
 }
 h1 {
     font: normal normal 1.7em serif;
+    color: var(--letras);
+    text-align: center;
 }
 aside.materiais {
-    justify-self: center;
-    width: 113px;
     grid-area: aside;
-    margin-top: 32px;
+    margin-top: 41px;
     width: 95%;
-    box-shadow: 7px 4px 14px -14px var(--dois);
+    box-shadow: 7px 4px 14px -14px var(--dois);  
+    justify-self: center;
 
     display: flex;
     flex-direction: column;
@@ -29,21 +30,19 @@ aside.materiais {
     gap: 25px;
 }
 /* estilo dos botões dos sites */
-a.site, a.video, a.ebook, a.articles, a.academics {
-    width: 84px;
-    height: 20px;
-    font-size: 9px;
-
-    padding-top: 15px;
-    margin-left: 10px;
-    border-radius: 15px;
-    color: var(--letras);
+a.site, a.video, a.ebook, a.article, a.academics {
+    font-size: 8px;
+    color: var(--dois);
+    width: 56px;
+    height: 26px;
+    padding-top: 6px;
+    margin-left: -2px;
     text-align: center;
     text-decoration: none;
-    cursor: pointer;
-    background-color: var(--cinco);
     border: none;
-    align-self: center;
+    border-radius: 10px;
+    cursor: pointer;
+    /* align-self: center; */
 }
 article {
     height: 100vh;
@@ -64,12 +63,6 @@ header {
     justify-content: center;
     align-items: center;
 }
-h3.subtitle_section {
-    font-family: 'Castoro Titling', cursive;
-    font-size: 19px;
-    font-weight: lighter;
-    text-align: center;
-}
 main {
     width: 73vw;
     justify-self: center;
@@ -83,40 +76,82 @@ main {
     justify-items: center;
 }
 section.referencias {
-    width: 69vw;
+    width: 73vw;
     height: fit-content;
-    justify-self: center;
+    /* justify-self: center; */
     
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    gap: 8px;
 }
 div.legenda_section {
     width: 64vw;
     border-bottom: solid 1px var(--tres);
 }
 h2.titulo_section {
+    font-size: 1.4em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  
+    font-weight: lighter;
     color: var(--dois);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: center;
+    margin: 7px 0px;
 }
-/* h2 {
-    font: normal normal 1.4em serif;
-} */
 section.informacoes, section.resultado {
     background-color: var(--um);
-    padding: 16px;
-    margin-top: 32px;
+    padding: 12px;
+    margin-top: 16px;
     width: 64vw;
     height: fit-content;
+    border-radius: 12px;
+    box-shadow: 3px 6px 17px -12px var(--dois);
+}
+h3.subtitle_section {
+    font-family: 'Castoro Titling', cursive;
+    font-size: 19px;
+    font-weight: lighter;
+    text-align: center;
+}
+section.resultado {
+    background-color: var(--um);
+    padding: 12px;
+    margin-bottom: 20px;
+    width: 64vw;
+    height: 128px;
     border-radius: 17px;
     box-shadow: 3px 6px 17px -12px var(--dois);
 }
-section.resultado {
-    height: 120px;
-}
-form {
-    margin: 18px 0px 22px 10px;
+form.formulario {
+    margin: 0px 0px 16px 5px;
     display: flex;
     flex-direction: column;
-    gap: 7px;
+    gap: 3px;
+}
+label.das_informacoes {
+    font: normal normal 0.8em Arial;
+}
+input {
+    padding: 7px;
+    height: 2vh;
+    width: 57vw;
+    border: none;
+    border-radius: 7px;
+}
+button[type=submit] {
+    background-color: var(--cinco);
+    color: var(--dois);
+    margin: 0px 5px;
+    border: none;
+    border-radius: 7px;
+    width: 64px;
+    height: 32px;
+    cursor: pointer;
+}
+footer {
+    grid-area: footer;
+    color: var(--dois);
+    background-color: var(--quatro);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
 }
