--- a/views/pages/video.ejs
+++ b/views/pages/video.ejs
@@ -11,7 +11,7 @@
             <section class="referencias">
 
                 <div class="legenda_section">
-                    <h2>INFORMAÇÕES PARA REFERÊNCIA</h2>
+                    <h2 class="titulo_section">Informações para referência</h2>
                 </div>
 
                 <section class="informacoes">
