--- a/public/style/style.css
+++ b/public/style/style.css
@@ -19,7 +19,7 @@ h1 {
 }
 aside.materiais {
     grid-area: aside;
-    margin-top: 41px;
+    margin-top: 48px;
     width: 95%;
     box-shadow: 7px 4px 14px -14px var(--dois);  
     justify-self: center;
@@ -31,9 +31,9 @@ aside.materiais {
 }
 /* estilo dos botões dos sites */
 a.site, a.video, a.ebook, a.article, a.academics {
-    font-size: 8px;
+    font-size: 0.6em;
     color: var(--dois);
-    width: 56px;
+    width: 90%;
     height: 26px;
     padding-top: 6px;
     margin-left: -2px;
@@ -43,6 +43,9 @@ a.site, a.video, a.ebook, a.article, a.academics {
     border-radius: 10px;
     cursor: pointer;
     /* align-self: center; */
+}
+a.site {
+    margin-top: 24px;
 }
 article {
     height: 100vh;
@@ -89,12 +92,12 @@ div.legenda_section {
     border-bottom: solid 1px var(--tres);
 }
 h2.titulo_section {
-    font-size: 1.4em;
+    font-size: 1.1em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  
     font-weight: lighter;
     color: var(--dois);
     text-align: center;
-    margin: 7px 0px;
+    margin: 16px 0px;
 }
 section.informacoes, section.resultado {
     background-color: var(--um);
@@ -107,8 +110,9 @@ section.informacoes, section.resultado {
 }
 h3.subtitle_section {
     font-family: 'Castoro Titling', cursive;
-    font-size: 19px;
+    font-size: 0.8em;
     font-weight: lighter;
+    margin: 16px 8px;
     text-align: center;
 }
 section.resultado {
@@ -127,7 +131,8 @@ form.formulario {
     gap: 3px;
 }
 label.das_informacoes {
-    font: normal normal 0.8em Arial;
+    font: normal normal 0.7em Arial;
+    margin-bottom: 8px;
 }
 input {
     padding: 8px;
