ajustes na largura (extra)

--- a/views/partials/aside.ejs
+++ b/views/partials/aside.ejs
@@ -2,6 +2,6 @@
     <a href="site" class="site">SITE</a>
     <a href="video" class="video">VÍDEO</a>
     <a href="ebook" class="ebook">EBOOK</a>
-    <a href="article" class="article">ARTIGO EM PDF/ONLINE</a>
-    <a href="academics" class="academics">TRABALHOS ACADÊMICOS</a>
+    <a href="article" class="article">ARTIGOS ONLINE</a>
+    <a href="academics" class="academics">MONOGRAFIAS</a>
 </aside>
